# pifijs

./: Cargo.toml  README.md  flake.nix
bot/: Cargo.toml
bot/src/: main.rs  message.rs  plotter.rs
domain/: Cargo.toml
domain/src/: lib.rs  linestrip.rs  message.rs  placement.rs  vec.rs
domain/tests/: linestrip.rs  message.rs  vec.rs
plotter/: Cargo.toml  README.md
plotter/src/: bin.rs  config.rs  controls.rs  lib.rs  linestrip.rs  plotter.rs  scene.rs
plotter/src/conditional_render/: mod.rs
plotter/src/headless_render/: crossbeam.rs  image_copy_driver.rs  mod.rs  plugin.rs  render_target.rs  saver.rs  scene_controller.rs
plotter/src/windowed_render/: mod.rs  plugin.rs  render_target.rs
