[workspace]
resolver = "2" # required by bevy
members = [
  "bot",
  "plotter",
  "domain",
]

# Enable a small amount of optimization in debug mode (suggested by bevy)
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (suggested by bevy)
[profile.dev.package."*"]
opt-level = 3