[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.1", features = ["framework", "standard_framework", "rustls_backend"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rand = { version = "0.8.5" }
plotter = { path = "../plotter" }

[[bin]]
name = "pifijs_bot"
path = "src/main.rs"
