[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.27.0" }
nom = { version = "7.1.3" }
approx = { version = "0.5.1" }
derive_more = { version = "0.99.17" }
strum = { version = "0.26" }
strum_macros = { version = "0.26" }

[lib]
name = "pifijs_domain_lib"
